<resources>
    <string name="app_name">Hansel</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_map">Map</string>
    <string name="action_settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="timeline">Timeline</string>
    <string name="enable_tracking">Enable Tracking</string>
    <string name="pebble_drop_interval">Drop Pebble Every</string>
    <string name="active_user_label">Active User</string>
    <string name="save">Save</string>
    <string name="send_pebbles_interval">Send Pebbles Every</string>
    <string name="fetch_pebbles_interval">Fetch Pebbles Every</string>
</resources>
