<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:id="@+id/settings_fragment" >

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_tracking"
        android:id="@+id/swtchTracking"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/active_user_label"
        android:id="@+id/tvActiveUserLabel"
        android:layout_below="@+id/swtchTracking"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:textColor="@android:color/black" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spnrUserId"
        android:layout_below="@+id/swtchTracking"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@+id/tvActiveUserLabel"
        android:layout_toEndOf="@+id/tvActiveUserLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pebble_drop_interval"
        android:id="@+id/tvPebbleDropIntervalLabel"
        android:layout_below="@+id/spnrUserId"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:textColor="@android:color/black" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spnrPebbleDropInterval"
        android:layout_below="@+id/spnrUserId"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@+id/tvPebbleDropIntervalLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_pebbles_interval"
        android:id="@+id/tvSendPebblesIntervalLabel"
        android:layout_below="@+id/spnrPebbleDropInterval"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:textColor="@android:color/black" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spnrSendPebblesInterval"
        android:layout_below="@+id/spnrPebbleDropInterval"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@+id/tvSendPebblesIntervalLabel" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btnSave"
        android:layout_below="@+id/spnrSendPebblesInterval"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>